# cookiecutter-kaggle-template

./: .gitignore  README.md  cookiecutter.json
{{ cookiecutter.repo_name }}/: .gitignore  Makefile  README.md  pyproject.toml
{{ cookiecutter.repo_name }}/input/src/: requirements.txt  setup.py
{{ cookiecutter.repo_name }}/input/src/{{ cookiecutter.module_name }}/: paths.py
