[tool.poetry]
name = "{{ cookiecutter.module_name }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author_name }}"]

[tool.poetry.dependencies]
python = ">=3.9,<4"
numpy = ">=1.19.2"
pandas = "^1.3.1"
fastparquet = "^0.7.1"
matplotlib = "^3.4.2"
ipython = "^7.26.0"
jupyter = "^1.0.0"
jupyterlab = "^3.1.1"
scikit-learn = "^0.24.2"
lightgbm = "^3.2.1"
catboost = "^0.26"
torch = "^1.9.0"
seaborn = "^0.11.1"
plotly = "^5.1.0"
statsmodels = "^0.12.2"
tensorflow = "^2.5.0"
kaggle = "^1.5.12"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=57.4"]
build-backend = "poetry.core.masonry.api"
